[project]
name = "comfyui-aces-io"
version = "1.1.0"
description = "OpenColorIO / ACES color-management nodes for ComfyUI — mirrors Nuke's OCIO node set with ACES 2.0, 1.3, and 1.2 support, EXR sequence loading, animated preview, and video export."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["comfyui", "ocio", "aces", "color-management", "opencolorio", "vfx"]

dependencies = [
    "PyOpenColorIO>=2.3.0",
    "numpy",
    "Pillow",
]

[project.urls]
Homepage     = "https://github.com/BISAM20/ComfyUI-ACES-IO"
Repository   = "https://github.com/BISAM20/ComfyUI-ACES-IO"
Issues       = "https://github.com/BISAM20/ComfyUI-ACES-IO/issues"

[tool.comfy]
PublisherId = "bisam20"
DisplayName = "ComfyUI-ACES-IO"
Icon        = ""
